# tesis

./: .gitignore  CONTEXT.md  Plantilla Memoria TFM.docx.txt  pyproject.toml
.github/workflows/: ci.yml
airflow/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
airflow/dags/: dag_ingest_f1.py  dag_ml_predict.py  dag_train_ml.py  dag_transform_gold.py  dag_transform_silver.py  dag_validate.py  fabric_utils.py
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/gold/: mart_constructor_standings.sql  mart_lap_performance.sql  mart_pitstop_features.sql  mart_pitstop_strategy.sql  schema.yml  sources.yml
dbt/seeds/: constructors_mapping.csv
ingestion/: __init__.py  ergast_client.py  fastf1_client.py  loader.py
notebooks/: nb_bronze_to_silver.py  nb_ml_infer.py  nb_ml_train.py
tests/: test_dedup_fact_laps.py  test_driver_id_mapping.py  test_feature_no_nulls.py  test_handle_null_lap.py  test_label_distribution.py  test_normalize_lap_time.py
